--- a/esphome/components/kwhpuls-resistor.yml
+++ b/esphome/components/kwhpuls-resistor.yml
@@ -19,10 +19,11 @@ globals:
   - id: initial_kwh_usage
     type: float
     restore_value: yes
-    initial_value: '00010'
+    initial_value: '0'
   - id: total_kwh_pulses
     type: int
     restore_value: yes
+    initial_value: '0'
 
 number:
   - platform: template
@@ -35,18 +36,19 @@ number:
     step: '10'
     restore_value: yes
     initial_value: '2000'
-    on_value:
-      then:
-        - logger.log:
-            format: "Chosen option: %s "
-            args: ["x.c_str()"]
-
+    # on_value:
+    #   then:
+    #     - logger.log:
+    #         format: "Chosen option: %s (index %d)"
+    #         args: ["x.c_str()", "i"]binary_sensor:
+#------------------------# kwh #------------------------#
 binary_sensor:
 #------------------------# kwh #------------------------#
   - platform: gpio
     id: kwh_sensor_status
     name: "kWh sensor status"
-    internal: False
+    internal: false
+    use_interrupt: false
     pin:
       number: D5
       allow_other_uses: true
