--- a/esphome/components/sdm72d.yml
+++ b/esphome/components/sdm72d.yml
@@ -19,10 +19,11 @@ globals:
   - id: initial_kwh_usage
     type: float
     restore_value: yes
-    initial_value: '00010' 
+    initial_value: '0'
   - id: total_kwh_pulses
     type: int
     restore_value: yes
+    initial_value: '0'
 
 number:
   - platform: template
@@ -35,26 +36,27 @@ number:
     step: '10'
     restore_value: yes
     initial_value: '2000'
-    on_value:
-      then:
-        - logger.log:
-            format: "Chosen option: %s "
-            args: ["x.c_str()"]
-
-binary_sensor:
+    # on_value:
+    #   then:
+    #     - logger.log:
+    #         format: "Chosen option: %s (index %d)"
+    #         args: ["x.c_str()", "i"]binary_sensor:
 #------------------------# kwh #------------------------#
+binary_sensor:
   - platform: gpio
     id: kwh_sensor_status
     name: "kWh sensor status"
-    internal: False
+    internal: false
+    use_interrupt: False
     pin:
       number: D5
-      allow_other_uses: true
+      inverted: true
       mode:
         input: true
+      allow_other_uses: true
     on_press:
-      - then:
-          lambda: id(total_kwh_pulses) += 1;
+      - lambda: |-
+          id(total_kwh_pulses) += 1;
 #------------------------# Kwh meter S0 poort 1 #------------------------#
 sensor:
 # ⬇ kwh meter s0 ⬇ #
