--- a/esphome/components/water-resistor.yaml
+++ b/esphome/components/water-resistor.yaml
@@ -20,10 +20,11 @@ globals:
   - id: initial_water_usage
     type: float
     restore_value: yes
-    initial_value: '010'
+    initial_value: '0'
   - id: total_water_pulses
     type: int
     restore_value: yes
+    initial_value: '0'
 
 select:
   # ⬇ water per m3 rate ⬇ #
@@ -39,18 +40,18 @@ select:
       - "0.1"
     initial_option: "0.001"
     restore_value: yes
-    on_value:
-      then:
-        - logger.log:
-            format: "Chosen option: %s "
-            args: ["x.c_str()"]
-
-#------------------------# Watermeter #------------------------#
+    # on_value:
+    #   then:
+    #     - logger.log:
+    #         format: "Chosen option: %s (index %d)"
+    #         args: ["x.c_str()", "i"]#------------------------# Watermeter #------------------------#
+    
 binary_sensor:
   - platform: gpio
     id: water_sensor_status
     name: "Water sensor status"
-    internal: False
+    internal: false
+    use_interrupt: false
     pin:
       number: D2
       allow_other_uses: true
@@ -116,3 +117,15 @@ sensor:
     accuracy_decimals: 0
     lambda: return id(total_water_pulses);
     internal: True
+
+# ⬇ Totaal watermeter in liter ⬇
+  - platform: template
+    name: "watermeter Totaal (L)"
+    unit_of_measurement: "L"
+    accuracy_decimals: 0
+    icon: mdi:water
+    lambda: |-
+      return id(sensor_pulse_meter_total).state * 1000;
+    update_interval: 10s
+    state_class: "total_increasing"
+    device_class: water
