--- a/esphome/components/watermeter_flux.yaml
+++ b/esphome/components/watermeter_flux.yaml
@@ -2,7 +2,7 @@
 # Bron : https://www.huizebruin.nl
 # Bron File : https://github.com/samimasad/s0tool_detectleak/tree/main/esphome
 # © Huizebruin.nl
-#  # ⬇ Enable Home Assistant API ⬇ # 
+#  # ⬇ Enable Home Assistant API ⬇ #
 api:
   services:
     - service: meterstand_water
@@ -20,11 +20,11 @@ globals:
   - id: initial_water_usage
     type: float
     restore_value: yes
-#    initial_value: '010'
+    initial_value: '0'
   - id: total_water_pulses
     type: int
     restore_value: yes
-  
+    initial_value: '0'
 
 #   # ⬇ Water per liter rate ⬇ #
 number:
@@ -47,7 +47,8 @@ binary_sensor:
   - platform: gpio
     id: water_sensor_status
     name: "Water sensor status"
-    internal: False
+    internal: false
+    use_interrupt: false
     pin:
       number: D2
       allow_other_uses: true
